# edu-video-factory

./: .env.example  .gitignore  README.md  generate_intermediate_report.py  inspect_state.py  main.py  pyproject.toml  regen_script.py
config/: cfa.yaml
docs/: Agents.md  Design.md  Requirements.md  Schemas.md  Technical.md
scripts/: batch_all.sh  run_book.sh  run_book_parallel.sh  run_book_resume_translate.sh  translate_book_parallel.sh
src/cfa_factory/agents/: core.py  framework.py  prompts.py  schemas.py
src/cfa_factory/cli/: main.py
src/cfa_factory/schemas/: models.py  vision_models.py
src/cfa_factory/tools/: chunker.py  index_store.py  manifest.py  reading_map_builder.py  retrieval.py  vision_extract.py
